force-app/main/default/objects/Account/fields/Assigned_Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Channel_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Internal channel manager assigned to the partner company.</description>
    <label>Assigned Channel Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Managed_Partner_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>