force-app/main/default/objects/Account/fields/Is_Partner__c.field-meta.xml
<CustomField>
    <fullName>Is_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether the account represents a partner company.</description>
    <label>Is Partner</label>
    <type>Checkbox</type>
</CustomField>