force-app/main/default/objects/Account/fields/MDF_Annual_Budget__c.field-meta.xml
<CustomField>
    <fullName>MDF_Annual_Budget__c</fullName>
    <description
  >Annual MDF budget allocated to the partner company.</description>
    <label>MDF Annual Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>