force-app/main/default/objects/Account/fields/MDF_Available_Budget__c.field-meta.xml
<CustomField>
    <fullName>MDF_Available_Budget__c</fullName>
    <description
  >Remaining MDF budget available to the partner company.</description>
    <label>MDF Available Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>