force-app/main/default/objects/Account/fields/MDF_Used__c.field-meta.xml
<CustomField>
    <fullName>MDF_Used__c</fullName>
    <description
  >MDF budget amount already approved or used by the partner company.</description>
    <label>MDF Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>