force-app/main/default/objects/Account/fields/Partner_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Partner_Capacity__c</fullName>
    <label>Partner Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>