force-app/main/default/objects/Account/fields/Partner_Region__c.field-meta.xml
<CustomField>
    <fullName>Partner_Region__c</fullName>
    <description>Region assigned to the partner company.</description>
    <label>Partner Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>