force-app/main/default/objects/Account/fields/Primary_Partner_Admin_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Partner_Admin_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Primary partner administrator contact for the account.</description>
    <label>Primary Partner Admin Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Admin_For_Partner_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>