force-app/main/default/objects/Account/fields/Program_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_End_Date__c</fullName>
    <description>Date when the partner program relationship ends.</description>
    <label>Program End Date</label>
    <type>Date</type>
</CustomField>